--- a/lfpl/src/Team.module.css
+++ b/lfpl/src/Team.module.css
@@ -1,3 +1,8 @@
+.layoutContainer {
+  display: flex;
+  align-items: flex-start;
+}
+
 .accountList {
   text-align: center;
   height: 100%;
@@ -102,33 +107,43 @@
   background-color: #00ff85;
   color: #000;
   border: none;
-  padding: 6px 12px;
+  padding: 8px 12px;
   margin-bottom: 20px;
-  border-radius: 4px;
+  border-radius: 12px;
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
+  transition: scale 0.15s;
 }
 
 .saveTeam:hover {
   background-color: #00e07b;
 }
 
+.saveTeam:active {
+  scale: 0.97;
+}
+
 .modalButton {
   background-color: #00ff85;
   color: #000;
   border: none;
-  padding: 6px 12px;
-  border-radius: 4px;
+  padding: 8px 12px;
+  border-radius: 12px;
   margin-bottom: 15px;
   width: 100px;
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
+  transition: scale 0.15s;
 }
 
 .modalButton:hover {
   background-color: #00e07b;
+}
+
+.modalButton:active {
+  scale: 0.97;
 }
 
 .subContainer {
@@ -158,4 +173,47 @@
 
 .subPlayerPoints {
   font-size: 12px;
+}
+
+.leagueList {
+  flex: 1;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  padding: 1.5rem;
+  background: #f9f9f9;
+  text-align: center;
+  height: 100%;
+  width: 50%;
+  float: left;
+  margin-top: 2rem;
+  margin-right: 1rem;
+}
+
+.leagueItem {
+  list-style: none;
+  margin-bottom: 2rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #ddd;
+}
+
+.leagueHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.leagueCode {
+  margin-top: 0.5rem;
+  font-style: italic;
+  color: #333;
+}
+
+.standings {
+  margin-top: 10px;
+  text-align: left;
+}
+
+.standings ol {
+  padding-left: 1.5rem;
+  margin-top: 5px;
 }
