--- a/lfpl/src/App.css
+++ b/lfpl/src/App.css
@@ -46,12 +46,32 @@ div {
   padding: 0 1rem;
   margin: 0;
   height: 30px;
+  position: relative;
 }
 
 .nav a {
   color: inherit;
   text-decoration: none;
   font-weight: bold;
+}
+
+.dark-mode-toggle {
+  position: absolute;
+  right: 1rem;
+  background: none;
+  border: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+  color: inherit;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.dark-mode-toggle:hover {
+  opacity: 0.8;
 }
 
 .teamList {
