--- a/lfpl/src/League.module.css
+++ b/lfpl/src/League.module.css
@@ -4,8 +4,8 @@
   padding: 2rem;
 }
 
-.left,
-.right {
+.leagueList,
+.leagueActions {
   flex: 1;
   border: 1px solid #ccc;
   border-radius: 12px;
@@ -14,11 +14,13 @@
 }
 
 .leagueInput {
-  display: block;
-  margin: 0.5rem 0 1rem;
-  padding: 0.5rem;
-  width: 100%;
-  box-sizing: border-box;
+  width: 95%;
+  padding: 10px 14px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
 
 .leagueBtn {
