--- a/lfpl/src/Team.module.css
+++ b/lfpl/src/Team.module.css
@@ -7,9 +7,19 @@
   text-align: center;
   height: 100%;
   width: 50%;
+  float: left;
+  padding: 20px;
+  margin-left: 20px;
+  margin-right: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
+  border-radius: 12px;
+  border: 1px solid #ccc;
+  background: #f9f9f9;
 }
 
-.accountList h2 {
+.accountList h1,
+h2 {
   margin-top: 0;
 }
 
@@ -176,17 +186,23 @@
 }
 
 .leagueList {
-  flex: 1;
-  border: 1px solid #ccc;
-  border-radius: 12px;
-  padding: 1.5rem;
-  background: #f9f9f9;
   text-align: center;
   height: 100%;
   width: 50%;
   float: left;
-  margin-top: 2rem;
-  margin-right: 1rem;
+  padding: 20px;
+  margin-left: 10px;
+  margin-right: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
+  border-radius: 12px;
+  border: 1px solid #ccc;
+  background: #f9f9f9;
+}
+
+.leagueList h1,
+h2 {
+  margin-top: 0;
 }
 
 .leagueItem {
