--- a/lfpl/src/Transfer.module.css
+++ b/lfpl/src/Transfer.module.css
@@ -8,9 +8,18 @@
   height: 100%;
   width: 50%;
   float: left;
+  padding: 20px;
+  margin-left: 20px;
+  margin-right: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
+  border-radius: 12px;
+  border: 1px solid #ccc;
+  background: #f9f9f9;
 }
 
-.accountList h2 {
+.accountList h1,
+h2 {
   margin-top: 0;
 }
 
@@ -182,15 +191,22 @@
   width: 50%;
   float: left;
   padding: 20px;
-  max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10px;
+  margin-right: 20px;
   margin-top: 0;
   margin-bottom: 0;
+  border-radius: 12px;
+  border: 1px solid #ccc;
+  background: #f9f9f9;
 }
 
 .playerList h1 {
   margin-top: 0;
+}
+
+.listContainer {
+  max-width: 500px;
+  margin: 0 auto;
 }
 
 .dropdown {
@@ -265,11 +281,11 @@
   border-radius: 12px;
   padding: 10px 15px;
   background-color: white;
-  transition: background 0.2s;
 }
 
 .playerCard:hover {
   background-color: #f7f7f7;
+  transition: background 0.2s;
 }
 
 .disabledCard {
@@ -291,6 +307,10 @@
   display: flex;
   flex-direction: column;
   text-align: left;
+}
+
+.playerInfo:hover {
+  cursor: default;
 }
 
 .playerMeta {
