--- a/lfpl/src/App.css
+++ b/lfpl/src/App.css
@@ -54,6 +54,17 @@ div {
   color: inherit;
   text-decoration: none;
   font-weight: bold;
+  padding-bottom: 3px;
+  border: 3px solid transparent;
+  transition: border-color 0.3s ease;
+}
+
+.nav a.active {
+  border-bottom: 3px solid currentColor;
+}
+
+.nav a:hover {
+  border-bottom: 3px solid currentColor;
 }
 
 .dark-mode-toggle {
