Change darkmode color scheme, add logout to navbar, slightly improve login/signup css

--- a/lfpl/src/App.css
+++ b/lfpl/src/App.css
@@ -79,6 +79,25 @@ div {
   opacity: 0.8;
 }
 
+.logout {
+  position: absolute;
+  left: 2px;
+  background: none;
+  border: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+  color: inherit;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.logout:hover {
+  opacity: 0.8;
+}
+
 .teamList {
   list-style-type: none;
 }
