--- a/lfpl/src/App.module.css
+++ b/lfpl/src/App.module.css
@@ -74,6 +74,7 @@
 .fixtureCard:hover {
   background-color: rgba(240, 248, 255, 0.76);
   transition: background-color 0.2s ease-in-out;
+  cursor: pointer;
 }
 
 .fixtureTeam {
