--- a/lfpl/src/App.module.css
+++ b/lfpl/src/App.module.css
@@ -1,7 +1,6 @@
 .layoutContainer {
   display: flex;
   align-items: flex-start;
-  gap: 20px;
 }
 
 .fixturesContainer {
@@ -9,6 +8,7 @@
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
+  margin-bottom: 15px;
   padding: 20px;
   border-radius: 12px;
   border: 1px solid #ccc;
@@ -150,6 +150,7 @@ h2 {
 .playerMarker {
   position: absolute;
   transform: translate(-50%, -50%);
+  border-bottom: 2px solid transparent;
   background: none;
   padding: 0;
   border-radius: 10px;
@@ -241,15 +242,24 @@ h2 {
 }
 
 .subCard {
-  cursor: pointer;
+  background: none;
+  padding: 0;
   border-radius: 10px;
-  padding: 8px;
+  border-bottom: 2px solid transparent;
+  padding: 4px 6px;
+  cursor: pointer;
+  font-size: 0.8rem;
   text-align: center;
-  width: 80px;
-  transition: background-color 0.2s ease-in-out;
+  font-weight: bold;
+  transition: background-color 0.2s ease-in-out, border-bottom 0.2s ease-in-out;
 }
 .subCard:hover {
-  background-color: rgba(240, 248, 255, 0.76);
+  background-color: rgb(204, 230, 253);
+  border-bottom: 2px solid currentColor;
+}
+
+.subCard:active {
+  scale: 0.98;
 }
 
 .subPlayerName {
@@ -265,7 +275,6 @@ h2 {
   text-align: center;
   height: 100%;
   width: 50%;
-  float: left;
   padding: 20px;
   margin-left: 10px;
   margin-right: 20px;
