--- a/lfpl/src/Signup.module.css
+++ b/lfpl/src/Signup.module.css
@@ -34,10 +34,10 @@
   background-color: #00ff85;
   color: #000;
   border: none;
-  width: 30%;
-  padding: 6px 12px;
-  margin: auto;
-  margin-bottom: 1rem;
+  width: 25%;
+  border-bottom: 2px solid currentColor;
+  padding: 8px 12px;
+  margin-bottom: 25px;
   border-radius: 12px;
   font-weight: bold;
   cursor: pointer;
