--- a/lfpl/src/Darkmode.css
+++ b/lfpl/src/Darkmode.css
@@ -112,8 +112,7 @@ body.dark-mode [class*="modalButton"],
 body.dark-mode [class*="addButton"],
 body.dark-mode [class*="leagueBtn"],
 body.dark-mode [class*="signupButton"],
-body.dark-mode .forwardBackButton,
-body.dark-mode .gameweekHeader {
+body.dark-mode [class*="forwardBackButton"] {
   background-color: #00cc6a !important;
   color: #000 !important;
 }
@@ -123,8 +122,7 @@ body.dark-mode [class*="modalButton"]:hover,
 body.dark-mode [class*="addButton"]:hover,
 body.dark-mode [class*="leagueBtn"]:hover,
 body.dark-mode [class*="signupButton"]:hover,
-body.dark-mode .forwardBackButton:hover,
-body.dark-mode .gameweekHeader:hover {
+body.dark-mode [class*="forwardBackButton"]:hover {
   background-color: #00b45d !important;
 }
 
